# EdelweissMeshfree

./: .buildinfo  .gitignore  .zenodo.json  README.md  conftest.py  gallery.html  genindex.html  gold.csv  gosford_particleSize_2.0_supportRadius_4.0_continuity_2_completeness_1.txt  gosford_particleSize_2.0_supportRadius_4.0_continuity_2_completeness_1_RF.csv  gosford_particleSize_2.0_supportRadius_4.0_continuity_2_completeness_1_U.csv  index.html  introduction.html  objects.inv  py-modindex.html  pyproject.toml  references.html  restart_0.h5  restart_1.h5  restart_2.h5  search.html  searchindex.js  setup.py  test_bug.py
.doctrees/: environment.pickle  gallery.doctree  index.doctree  introduction.doctree  references.doctree
.doctrees/documentation/: cellelements.doctree  cells.doctree  constraints.doctree  field_output.doctree  index.doctree  meshfree.doctree  model_generators.doctree  models.doctree  numeric_tools.doctree  organization.doctree  output_managers.doctree  particle_managers.doctree  particles.doctree  points_and_fields.doctree  sets.doctree  solvers.doctree  step_actions.doctree
.github/workflows/: black.yml  run_tests.yml  sphinx.yml
_modules/: index.html
_sources/: introduction.rst.txt  references.rst.txt
_sources/documentation/: meshfree.rst.txt  model_generators.rst.txt  organization.rst.txt  particles.rst.txt
_static/: documentation_options.js
doc/source/: conf.py  contributors.rst  gallery.rst  index.rst  installation.rst  publications.rst
documentation/: cellelements.html  cells.html  constraints.html  field_output.html  index.html  meshfree.html  model_generators.html  models.html  numeric_tools.html  organization.html  output_managers.html  particle_managers.html  particles.html  points_and_fields.html  sets.html  solvers.html  step_actions.html
documentation/mpm/: material_point_managers.html  material_points.html
edelweissmeshfree/: __init__.py
edelweissmeshfree/_cli/: __init__.py
edelweissmeshfree/cellelements/: __init__.py
edelweissmeshfree/cells/: __init__.py
edelweissmeshfree/config/: __init__.py  cellelementlibrary.py  celllibrary.py  mplibrary.py
edelweissmeshfree/constraints/: __init__.py  discreterigidbodypenaltycontact.py  frictionaldiscreterigidbodypenaltycontact.py  frictionalparticlepenaltyrigidbodycontact.py  particlelagrangiancartesianboundary.py  particlelagrangiandirichlet.py  particlelagrangianequalvalue.py  particlelagrangianweakdirichlet.py  particlelagrangianweakdirichlet.py.orig  particlemortarweakdirichlet.py  particlepenaltycartesianboundary.py  particlepenaltyequalvalue.py  particlepenaltyrigidbodycontact.py  (+5 more)
(+473 files in other folders)
