[build-system]
requires = ["setuptools", "Cython", "numpy"]

[project]
name = "EdelweissMeshfree"
version = "26.05"
description = "EdelweissMeshfree: A meshfree module for EdelweissFE."
readme = "README.md"
authors = [
    { name = "Matthias Neuner", email = "matthias.neuner@uibk.ac.at" },
    { name = "Thomas Mader", email = "thomas.mader@boku.ac.at" },
]
license = { text = "LGPL-2.1" }
urls = { Homepage = "https://github.com/Edelweiss-Numerics/EdelweissMeshfree" }
requires-python = ">=3.12"

[tool.setuptools]
include-package-data = true

[tool.setuptools.packages.find]
where = ["."]
