[build-system]
requires = ["setuptools", "Cython>=3.1", "numpy"]

[project]
name = "EdelweissMeshfree"
version = "26.11"
description = "EdelweissMeshfree: A meshfree module for EdelweissFE."
readme = "README.md"
authors = [
    { name = "Matthias Neuner", email = "matthias.neuner@uibk.ac.at" },
    { name = "Thomas Mader", email = "thomas.mader@boku.ac.at" },
]
license = { text = "LGPL-2.1" }
urls = { Homepage = "https://github.com/Edelweiss-Numerics/EdelweissMeshfree" }
requires-python = ">=3.14"

[tool.setuptools]
include-package-data = true

[tool.setuptools.packages.find]
where = ["."]

[tool.pytest.ini_options]
addopts = "-v --tb=short"

[tool.black]
line-length = 120
target-version = ["py312"]
